-Реализовал функционал мультитем

--- a/app/src/main/res/layout/fragment_create_idea.xml
+++ b/app/src/main/res/layout/fragment_create_idea.xml
@@ -92,11 +92,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        android:backgroundTint="@color/fabColor"
+        android:backgroundTint="?attr/iconColor"
         android:clickable="true"
         android:focusable="true"
         android:src="@drawable/ic_add_task"
-        app:backgroundTint="@color/fabColor"
+        app:backgroundTint="?attr/iconColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -114,11 +114,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginEnd="24dp"
-            android:backgroundTint="@color/fabColor"
+            android:backgroundTint="?attr/iconColor"
             android:clickable="true"
             android:focusable="true"
             android:src="@drawable/ic_choose_image"
-            app:backgroundTint="@color/fabColor"
+            app:backgroundTint="?attr/iconColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -151,11 +151,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginEnd="24dp"
-            android:backgroundTint="@color/fabColor"
+            android:backgroundTint="?attr/iconColor"
             android:clickable="true"
             android:focusable="true"
             android:src="@drawable/ic_camera"
-            app:backgroundTint="@color/fabColor"
+            app:backgroundTint="?attr/iconColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
