--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -105,7 +105,7 @@
             android:drawableEnd="@drawable/ic_trash_forever_24"
             android:drawablePadding="15dp"
             android:text="@string/clear_minutes"
-            android:textColor="?attr/textColor"
+            android:textColor="?attr/settings_text_color"
             android:textSize="15sp"
             android:textStyle="bold" />
 
@@ -129,7 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:text="@string/change_theme"
-            android:textColor="?attr/textColor"
+            android:textColor="?attr/settings_text_color"
             android:textSize="15sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -152,7 +152,7 @@
             android:layout_marginStart="40dp"
             android:drawablePadding="15dp"
             android:text="@string/change_language"
-            android:textColor="?attr/textColor"
+            android:textColor="?attr/settings_text_color"
             android:textSize="15sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -175,7 +175,7 @@
             android:layout_marginStart="40dp"
             android:drawablePadding="15dp"
             android:text="@string/share_app"
-            android:textColor="?attr/textColor"
+            android:textColor="?attr/settings_text_color"
             android:textSize="15sp"
             android:textStyle="bold" />
     </LinearLayout>
