--- a/app/src/main/res/layout/fragment_timing.xml
+++ b/app/src/main/res/layout/fragment_timing.xml
@@ -22,11 +22,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        android:backgroundTint="@color/fabColor"
+        android:backgroundTint="@color/plus_background"
         android:clickable="true"
         android:focusable="true"
         android:src="@drawable/ic_add_task"
-        app:backgroundTint="@color/fabColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -44,13 +43,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginEnd="24dp"
-            android:backgroundTint="@color/fabColor"
+            android:backgroundTint="@color/plus_background"
             android:clickable="true"
             android:focusable="true"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/fab_stopwatch"
-            app:backgroundTint="@color/fabColor"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
@@ -81,13 +79,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginEnd="24dp"
-            android:backgroundTint="@color/fabColor"
+            android:backgroundTint="@color/plus_background"
             android:clickable="true"
             android:focusable="true"
             android:src="@drawable/fab_timer"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:backgroundTint="@color/fabColor"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
