--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="plusBackground">#162C53</item>
         <item name="settings_text_color">#FFF</item>
         <item name="create_event_editText">#FFF</item>
+        <item name="alert_color">#FFF</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
